--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-<meta http-equiv=refresh content="url=https://häcker.net">
+<!doctype html>
+<html>
+<head>
+<meta http-equiv="refresh" content="0; url=https://häcker.net/">
+</head>
+</html>
